--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ant-design-vue": "^1.3.8",
     "axios": "^0.18.0",
     "vue": "^2.5.16",
+    "vue-codemirror": "^4.0.6",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
