--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "ant-design-vue": "^1.3.8",
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.8.2",
     "vue": "^2.5.16",
     "vue-codemirror": "^4.0.6",
